[package]
name = "process-monitor"
version = "0.1.0"
description = "Log process information to a CSV file"
authors = [
 "Druva D <ddruva445@gmail.com>"
]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Ceres445/process-monitor"
repository = "https://github.com/Ceres445/process-monitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"]}
csv = "1.2.2"
sysinfo = { version = "0.29"}
